--- a/src/app/welcome.fxml
+++ b/src/app/welcome.fxml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0" styleClass="root" stylesheets="@app.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to file encoder" textAlignment="CENTER">
+      <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Welcome to file encoder" textAlignment="CENTER">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI" size="20.0" />
          </font>
          <VBox.margin>
             <Insets bottom="15.0" />
          </VBox.margin>
       </Text>
-      <Button mnemonicParsing="false" onAction="#uploadFile" text="Upload your file" />
+      <Button mnemonicParsing="false" onAction="#uploadFile" styleClass="upload-button" text="Upload your file">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </VBox>
