--- a/src/app/app.css
+++ b/src/app/app.css
@@ -3,6 +3,10 @@
     -fx-background-color: linear-gradient(to right, #11998e, #38ef7d);
 }
 
+.result-root{
+    -fx-padding: 15px;
+}
+
 .upload-button{
     -fx-text-fill: #FFF;
     -fx-border-color: #FFF;
