--- a/src/app/result.fxml
+++ b/src/app/result.fxml
@@ -4,19 +4,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0" stylesheets="@app.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.ResultController">
    <children>
       <HBox prefHeight="40.0" prefWidth="320.0">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="File Size:" wrappingWidth="96.826171875">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Text>
-            <Label fx:id="fileSize" text="Label" />
+            <Label fx:id="label" layoutX="10.0" layoutY="10.0" text="Label" />
          </children>
       </HBox>
    </children>
